[gd_scene load_steps=5 format=3 uid="uid://dlnfoe38vgqp"]

[ext_resource type="Script" path="res://zombie.gd" id="1_nufbr"]
[ext_resource type="Texture2D" uid="uid://c842urika2888" path="res://zombie_03.png" id="2_t51df"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_reue0"]
size = Vector2(139, 210)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xlgub"]
size = Vector2(246, 212)

[node name="Zombie" type="CharacterBody2D"]
script = ExtResource("1_nufbr")

[node name="Zombie03" type="Sprite2D" parent="."]
position = Vector2(0, -2)
texture = ExtResource("2_t51df")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -1)
shape = SubResource("RectangleShape2D_reue0")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2, -1)
shape = SubResource("RectangleShape2D_xlgub")
debug_color = Color(0.996896, 0, 0.318943, 0.42)

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 1.5

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
